--- a/test.html
+++ b/test.html
@@ -10,33 +10,26 @@
 
 <body>
 
-    <button id="add_station" onclick="ShowDialog()">Dialog</button>
-    <dialog id='dialog'>
+    <button id="btnAdd" class="btn_bar">Add</button>
+
+    <dialog id="dialog_add">
         <div class="wrapper">
             <form>
-                <label>Station</label>
-                <select required>
-                  <option disabled selected>Select station</option>
-                  <option>SGN</option>
-                  <option>HN</option>
-                  <option>DL</option>
-                  <option>Korea</option>
-                  <option>China</option>
-              </select>
-                <label>Duration:</label>
-                <input type="text" placeholder="Enter duration" required>
-                <label>Note:</label>
-                <input type="text" placeholder="Take note">
-
-                <button class="btn_confirm_add">Confirm</button>
-                <button class="btn_confirm_add" type="button" onclick="CloseDialog()">Cancel</button>
-
+                <div class="field_add_station">
+                    <label class="label_station">ID Plane:</label>
+                    <input required class="input" type="text" placeholder="Enter Plane ID">
+                    <label class="label_station">Plane Name:</label>
+                    <input required id='duration_dialog' class="input_station" type="text" placeholder="Enter Plane Name">
+                    <label class="label_station">ID Manufacture:</label>
+                    <input required id='note_dialog' class="input_station" type="text" placeholder="Enter ID Manufacture">
+                    <button id="confirmAdd" class="btn_station">Add</button>
+                    <button class="btn_station" onclick="CloseDialog()">Cancel</button>
+                </div>
+            </form>
         </div>
-
     </dialog>
 
-
-    <script src="/asses/js/adding.js"></script>
+    <script src="/asses/js/staff_plan.js"></script>
 
 </body>
 
